--- a/to-be-deleted.Rmd
+++ b/to-be-deleted.Rmd
@@ -836,7 +836,7 @@ criterion are often those genes that have a low average expression level, or
 that are expressed only in a small proportion of cells.
 ---> 
 
-```{r geweke-diag, fig.cap="Geweke Z-score for mean expression parameters is plotted against mean expression estimates for naive (left) and activated (right) cells."}
+```{r geweke-diag, fig.cap="Geweke Z-score for mean expression parameters is plotted against mean expression estimates for naive (left) and activated (right) cells.", eval = FALSE}
 library("coda")
 library("ggplot2")
 library("viridis")
@@ -898,7 +898,7 @@ whose expression was only captured in a small number of cells).
 As described later in this manuscript, `BASiCS_TestDE` automatically excludes 
 genes with low ESS when performing differential expression testing.
 
-```{r ess-diag, fig.cap="ESS for mean expression parameters is plotted against mean expression estimates for naive (left) and activated (right) cells."}
+```{r ess-diag, fig.cap="ESS for mean expression parameters is plotted against mean expression estimates for naive (left) and activated (right) cells.", eval = FALSE}
 ess_mu_naive <- BASiCS_DiagPlot(chain_naive, Param = "mu") +
   theme(legend.position = "bottom")
 ess_mu_active <- BASiCS_DiagPlot(chain_active, Param = "mu") +
@@ -906,3 +906,177 @@ ess_mu_active <- BASiCS_DiagPlot(chain_active, Param = "mu") +
 plot_grid(ess_mu_naive, ess_mu_active, ncol = 2)
 ```
 
+
+## Quantifying transcriptional variability using BASiCS
+
+In `r Biocpkg("scran")`, the squared coefficient of variation (CV^2^) is used 
+as a proxy for transcriptional variability within a population of cells
+Instead, `r Biocpkg("BASiCS")` uses gene-specific over-dispersion 
+parameters $\delta_i$ for this purpose. 
+As seen in Fig .. these estimates are highly correlated. 
+Both variability measures are confounded by differences in mean expression, e.g.
+highly expressed genes tend to exhibit lower variability according to these
+metrics. For example, Figure \@ref(fig:dispersion-vs-mean)A displays 
+`r Biocpkg("BASiCS")` posterior estimates for over-dispersion parameters 
+inferred for the naive CD4^+^ T cells and how these relate to mean expression 
+estimates (the `BASiCS_ShowFit` function can be used to generate such a plot, 
+but we will generate it manually to demonstrate how users can extract this 
+information from a `BASiCS_MCMC` object. 
+A similar behaviour is observed for `r Biocpkg("scran")` estimates (see Figure \@ref(fig:dispersion-vs-mean)B). 
+
+<!--- CV: Can we make the n_neigh smaller? --->
+
+```{r dispersion-vs-mean, fig.width=6, fig.height=6, fig.cap="Comparison of variability estimates and mean expression estimates using either BASiCS or using counts normalised with scaling normalisation factors estimated using scran. A: over-dispersion and mean expression estimates from BASiCS; B: residual over-dispersion and mean expression estimates from BASiCS; C: variance estimated using normalised counts using scran size factors against over-dispersion estimates from BASiCS; D: CV2 estimates and over-dispersion estimates from BASiCS; E: DM estimates and mean expression of normalised counts from scran; F: DM estimates from scran and residual over-dispersion estimates from BASiCS."}
+
+library("ggpointdensity")
+library("viridis")
+
+# Get BASiCS posterior estimates for mean and variability - naive cells
+summary_naive <- Summary(chain_naive)
+parameter_df <- data.frame(
+  mu = displaySummaryBASiCS(summary_naive, Param = "mu")[, 1],
+  delta = displaySummaryBASiCS(summary_naive, Param = "delta")[, 1],
+  epsilon = displaySummaryBASiCS(summary_naive, Param = "epsilon")[, 1]
+)
+
+# Get scran estimates for mean and variability - naive cells
+sce_naive <- logNormCounts(sce_naive, log = FALSE)
+parameter_df$mean_scran <- rowMeans(assay(sce_naive, "normcounts"))
+parameter_df$cv2_scran <- rowVars(assay(sce_naive, "normcounts")) /
+  parameter_df$mean_scran^2
+parameter_df$DM <- DM(
+  mean = parameter_df$mean_scran,
+  cv2 = parameter_df$cv2_scran
+)
+
+# Remove genes without counts in > 2 cells - BASiCS estimates not provided
+ind_not_na <- !(is.na(parameter_df$epsilon))
+
+# Mean vs variability - BASiCS
+g1 <- ggplot(parameter_df[ind_not_na, ]) +
+  geom_pointdensity(aes(log(mu), log(delta))) +
+  scale_colour_viridis() +
+  theme(
+    legend.position = "bottom",
+    legend.text = element_text(angle = 45, hjust = 1)
+  ) +
+  labs(
+    x = "BASiCS means",
+    y = "BASiCS\nover-dispersion"
+  )
+# Mean vs variability - scran
+g2 <- ggplot(parameter_df[ind_not_na, ]) +
+  geom_pointdensity(aes(log(mean_scran), log(cv2_scran))) +
+  scale_colour_viridis() +
+  theme(
+    legend.position = "bottom",
+    legend.text = element_text(angle = 45, hjust = 1)
+  ) +
+  labs(
+    x = "scran means",
+    y = "scran CV^2"
+  )
+# Variability - BASiCS and scran
+g3 <- ggplot(parameter_df[ind_not_na, ]) +
+  geom_pointdensity(aes(log(cv2_scran), log(delta))) +
+  scale_colour_viridis() +
+  theme(
+    legend.position = "bottom",
+    legend.text = element_text(angle = 45, hjust = 1)
+  ) +
+  labs(
+    x = "scran CV^2",
+    y = "BASiCS\nover-dispersion"
+  )
+
+# Mean vs residual variability - BASiCS
+g4 <- ggplot(parameter_df[ind_not_na, ]) +
+  geom_pointdensity(aes(log(mu), epsilon)) +
+  scale_colour_viridis() +
+  theme(
+    legend.position = "bottom",
+    legend.text = element_text(angle = 45, hjust = 1)
+  ) +
+  labs(
+    x = "BASiCS means",
+    y = "BASiCS residual\nover-dispersion"
+  )
+
+# Mean vs residual variability - scran
+g5 <- ggplot(parameter_df[ind_not_na, ]) +
+  geom_pointdensity(aes(log(mean_scran), DM)) +
+  scale_colour_viridis() +
+  theme(
+    legend.position = "bottom",
+    legend.text = element_text(angle = 45, hjust = 1)
+  ) +
+  labs(
+    x = "scran means",
+    y = "scran DM"
+  )
+
+# Residual variability - BASiCS and scran
+g6 <- ggplot(parameter_df[ind_not_na, ]) +
+  geom_pointdensity(aes(DM, epsilon)) +
+  scale_colour_viridis() +
+  theme(
+    legend.position = "bottom",
+    legend.text = element_text(angle = 45, hjust = 1)
+  ) +
+  labs(
+    x = "scran DM",
+    y = "BASiCS residual\nover-dispersion"
+  )
+
+plot_grid(
+  g3, g1, g2, 
+  g6, g4, g5, 
+  labels = LETTERS[1:6],
+  ncol = 3
+)
+```
+
+Recently [@Eling2018], we extended `r Biocpkg("BASiCS")` to explicitly model 
+the mean-variability relationship by performing an internal regression between 
+the over-dispersion and mean expression parameters, as visualised in Figure 
+\@ref(fig:dispersion-vs-mean). This results in the $\epsilon$ parameter, a measure of variability that is not confounded by mean expression. This *residual* 
+over-dispersion parameter quantifies the level of variability above or below 
+that expected based on the overall mean-variance relationship.
+Similarly, Kolodziejczyk _et al._ used the distance to a rolling 
+median (DM) along the mean-variability trend to correct for this confounding 
+factor [@Kolodziejczyk2015cell]. Here, we highlight how to obtain the residual
+variability estimates using `r Biocpkg("BASiCS")` and `r Biocpkg("scran")`.
+Further, we illustrate the mean-variance relationship for each variability 
+measures. For this analysis, we exclude genes that are not expressed in at 
+least 2 cells. These genes have missing (`NA`) values for the residual 
+over-dispersion parameter, $\epsilon$. These values can be obtained using the
+function `displayChainBASiCS`. We will use `r CRANpkg("ggpointdensity")` 
+to visualise the local density of genes along the axes of mean and variability.
+Here, we focus on naive cells, but a similar analysis for active cells would
+show very similar results.
+
+
+Figures \@ref(fig:dispersion-vs-mean)C and \@ref(fig:dispersion-vs-mean)D 
+show that variance and CV^2^ are both highly correlated with the 
+over-dispersion estimates from 
+`r Biocpkg("BASiCS")`. Again, for this comparison,
+we exclude genes that are not observed to be expressed in at least 2 cells,
+given that variability cannot meaningfully be quantified given a single 
+observation. Furthermore, Figure \@ref(fig:dispersion-vs-mean)A shows that the 
+over-dispersion parameters estimated by `r Biocpkg("BASiCS")` are strongly
+correlated with mean expression. 
+
+Neither the DM nor the residual over-dispersion estimates show association 
+with mean expression, as shown in Figures \@ref(fig:dispersion-vs-mean)B
+and \@ref(fig:dispersion-vs-mean)E.
+Furthermore, these mean-independent variability measures are highly correlated,
+as seen in Figure \@ref(fig:dispersion-vs-mean)F.
+These measures can be used to associate genomic features 
+[@Morgan2018;@Faure2017] or transcriptional dynamics [@Antolovic2017] with 
+gene expression variability.
+While the DM is calculated as a point estimate, `r Biocpkg("BASiCS")` stores 
+each posterior sample within the `BASiCS_Chain` object.
+They can be accessed using the `displayChain` function. This function
+extracts cell- or gene-specific samples in the form of a matrix, wherein each 
+column contains cell- or gene-specific parameters, and rows contain the MCMC 
+samples.
