--- a/to-be-deleted.Rmd
+++ b/to-be-deleted.Rmd
@@ -914,15 +914,59 @@ as a proxy for transcriptional variability within a population of cells
 Instead, `r Biocpkg("BASiCS")` uses gene-specific over-dispersion 
 parameters $\delta_i$ for this purpose. 
 As seen in Fig .. these estimates are highly correlated. 
-Both variability measures are confounded by differences in mean expression, e.g.
-highly expressed genes tend to exhibit lower variability according to these
-metrics. For example, Figure \@ref(fig:dispersion-vs-mean)A displays 
-`r Biocpkg("BASiCS")` posterior estimates for over-dispersion parameters 
-inferred for the naive CD4^+^ T cells and how these relate to mean expression 
-estimates (the `BASiCS_ShowFit` function can be used to generate such a plot, 
-but we will generate it manually to demonstrate how users can extract this 
-information from a `BASiCS_MCMC` object. 
-A similar behaviour is observed for `r Biocpkg("scran")` estimates (see Figure \@ref(fig:dispersion-vs-mean)B). 
+As seen in Figures \@ref(fig:dispersion-vs-mean)A and 
+\@ref(fig:dispersion-vs-mean)B, both variability measures are confounded by 
+differences in mean expression, e.g. highly expressed genes tend to exhibit 
+lower variability according to these metrics (note that the `BASiCS_ShowFit` 
+function can be used to explore this relationship, but we generated the plot 
+manually to demonstrate how users can extract this information from a 
+`BASiCS_MCMC` object). 
+
+Recently [@Eling2018], we extended `r Biocpkg("BASiCS")` to explicitly model 
+the mean-variability relationship by performing an internal regression between 
+the over-dispersion and mean expression parameters, as visualised in Figure 
+\@ref(fig:dispersion-vs-mean). This results in the $\epsilon$ parameter, a measure of variability that is not confounded by mean expression. This *residual* 
+over-dispersion parameter quantifies the level of variability above or below 
+that expected based on the overall mean-variance relationship.
+Similarly, Kolodziejczyk _et al._ used the distance to a rolling 
+median (DM) along the mean-variability trend to correct for this confounding 
+factor [@Kolodziejczyk2015cell]. Here, we highlight how to obtain the residual
+variability estimates using `r Biocpkg("BASiCS")` and `r Biocpkg("scran")`.
+Further, we illustrate the mean-variance relationship for each variability 
+measures. For this analysis, we exclude genes that are not expressed in at 
+least 2 cells. These genes have missing (`NA`) values for the residual 
+over-dispersion parameter, $\epsilon$. These values can be obtained using the
+function `displayChainBASiCS`. We will use `r CRANpkg("ggpointdensity")` 
+to visualise the local density of genes along the axes of mean and variability.
+Here, we focus on naive cells, but a similar analysis for active cells would
+show very similar results.
+
+
+Figures \@ref(fig:dispersion-vs-mean)C and \@ref(fig:dispersion-vs-mean)D 
+show that variance and CV^2^ are both highly correlated with the 
+over-dispersion estimates from 
+`r Biocpkg("BASiCS")`. Again, for this comparison,
+we exclude genes that are not observed to be expressed in at least 2 cells,
+given that variability cannot meaningfully be quantified given a single 
+observation. Furthermore, Figure \@ref(fig:dispersion-vs-mean)A shows that the 
+over-dispersion parameters estimated by `r Biocpkg("BASiCS")` are strongly
+correlated with mean expression. 
+
+Neither the DM nor the residual over-dispersion estimates show association 
+with mean expression, as shown in Figures \@ref(fig:dispersion-vs-mean)B
+and \@ref(fig:dispersion-vs-mean)E.
+Furthermore, these mean-independent variability measures are highly correlated,
+as seen in Figure \@ref(fig:dispersion-vs-mean)F.
+These measures can be used to associate genomic features 
+[@Morgan2018;@Faure2017] or transcriptional dynamics [@Antolovic2017] with 
+gene expression variability.
+While the DM is calculated as a point estimate, `r Biocpkg("BASiCS")` stores 
+each posterior sample within the `BASiCS_Chain` object.
+They can be accessed using the `displayChain` function. This function
+extracts cell- or gene-specific samples in the form of a matrix, wherein each 
+column contains cell- or gene-specific parameters, and rows contain the MCMC 
+samples.
+
 
 <!--- CV: Can we make the n_neigh smaller? --->
 
@@ -1036,47 +1080,4 @@ plot_grid(
 )
 ```
 
-Recently [@Eling2018], we extended `r Biocpkg("BASiCS")` to explicitly model 
-the mean-variability relationship by performing an internal regression between 
-the over-dispersion and mean expression parameters, as visualised in Figure 
-\@ref(fig:dispersion-vs-mean). This results in the $\epsilon$ parameter, a measure of variability that is not confounded by mean expression. This *residual* 
-over-dispersion parameter quantifies the level of variability above or below 
-that expected based on the overall mean-variance relationship.
-Similarly, Kolodziejczyk _et al._ used the distance to a rolling 
-median (DM) along the mean-variability trend to correct for this confounding 
-factor [@Kolodziejczyk2015cell]. Here, we highlight how to obtain the residual
-variability estimates using `r Biocpkg("BASiCS")` and `r Biocpkg("scran")`.
-Further, we illustrate the mean-variance relationship for each variability 
-measures. For this analysis, we exclude genes that are not expressed in at 
-least 2 cells. These genes have missing (`NA`) values for the residual 
-over-dispersion parameter, $\epsilon$. These values can be obtained using the
-function `displayChainBASiCS`. We will use `r CRANpkg("ggpointdensity")` 
-to visualise the local density of genes along the axes of mean and variability.
-Here, we focus on naive cells, but a similar analysis for active cells would
-show very similar results.
 
-
-Figures \@ref(fig:dispersion-vs-mean)C and \@ref(fig:dispersion-vs-mean)D 
-show that variance and CV^2^ are both highly correlated with the 
-over-dispersion estimates from 
-`r Biocpkg("BASiCS")`. Again, for this comparison,
-we exclude genes that are not observed to be expressed in at least 2 cells,
-given that variability cannot meaningfully be quantified given a single 
-observation. Furthermore, Figure \@ref(fig:dispersion-vs-mean)A shows that the 
-over-dispersion parameters estimated by `r Biocpkg("BASiCS")` are strongly
-correlated with mean expression. 
-
-Neither the DM nor the residual over-dispersion estimates show association 
-with mean expression, as shown in Figures \@ref(fig:dispersion-vs-mean)B
-and \@ref(fig:dispersion-vs-mean)E.
-Furthermore, these mean-independent variability measures are highly correlated,
-as seen in Figure \@ref(fig:dispersion-vs-mean)F.
-These measures can be used to associate genomic features 
-[@Morgan2018;@Faure2017] or transcriptional dynamics [@Antolovic2017] with 
-gene expression variability.
-While the DM is calculated as a point estimate, `r Biocpkg("BASiCS")` stores 
-each posterior sample within the `BASiCS_Chain` object.
-They can be accessed using the `displayChain` function. This function
-extracts cell- or gene-specific samples in the form of a matrix, wherein each 
-column contains cell- or gene-specific parameters, and rows contain the MCMC 
-samples.
