--- a/to-be-deleted.tex
+++ b/to-be-deleted.tex
@@ -995,8 +995,8 @@ data, as genes with very low counts often suffer from slow convergence and poor 
 \end{figure}
 
 As \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} infers thousands of parameters, it is
-impractical to assess these graphical diagnostics for each parameter.
-Thus, it is helpful to use numerical diagnostics that can be applied to multiple
+impractical to assess these diagnostics for each parameter.
+Thus, it is helpful to use numerical diagnostics, applied to multiple
 parameters simultaneously.
 Here, we focus on the diagnostic criterion proposed by Geweke \citep{Geweke1995}
 which compares the average draws obtained during the initial (10\% after burn
@@ -1048,7 +1048,7 @@ For example, the autocorrelation function (e.g.~Figure
 correlation between the chain and its lagged versions.
 Strong autocorrelation indicates that neighbouring MCMC samples are highly
 dependent and suggest poor sampling efficiency.
-Low sampling efficiency may indicate that the MCMC draws do not contain
+The latter may indicate that the MCMC draws do not contain
 sufficient information to produce accurate posterior estimates.
 In other words, highly correlated MCMC samplers require more samples to produce
 the same level of Monte Carlo error for an estimate
